# integracao_nbs_autodeal

./: .gitignore  README.md  Tasks.md  api_autodeal.py  dados.json  dados.py  pyproject.toml
src/: main.py
src/data/infra/: database.py  load_settings.py
src/data/models/: company.py
src/data/schemas/: os_cover.py
src/data/sql/: enviar_os_capa.sql
src/modules/companies/use_case/: get_companies.py
src/utils/: metadatakeys.py
